@@ -124,7 +124,7 @@ public class ValidatorsTest extends AbstractKeycloakTest {
         Assert.assertEquals(LengthValidator.ID, error.getValidatorId());
         Assert.assertEquals(inputHint, error.getInputHint());
         Assert.assertEquals(LengthValidator.MESSAGE_INVALID_LENGTH_TOO_SHORT, error.getMessage());
-        Assert.assertEquals(new Integer(2), error.getMessageParameters()[0]);
+        Assert.assertEquals(Integer.valueOf(2), error.getMessageParameters()[0]);
 
         Assert.assertTrue(result.hasErrorsForValidatorId(LengthValidator.ID));
         Assert.assertFalse(result.hasErrorsForValidatorId("unknown"));
